--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,19 @@
+// Frameworks
+// ============================================================================
+@import "compass/typography/vertical_rhythm";
+
+
+// Typography
+// ============================================================================
 @import url(http://fonts.googleapis.com/css?family=Headland+One);
 @import url(http://fonts.googleapis.com/css?family=Nixie+One);
+
+$base-font-size     : 16px;
+$base-line-height   : $base-font-size * 2;
+$xlarge-font-size     : $base-font-size * 1.5;
+$xxlarge-font-size    : $base-font-size * 2;
+
+
 
 .browsehappy {
   margin: 0.2em 0;
@@ -9,14 +23,19 @@
 }
 
 body {
+  //@include debug-vertical-alignment();
   font-family: 'Nixie One', cursive;
+  font-size: $base-font-size;
+  line-height: $base-line-height;
   padding-top: 20px;
   padding-bottom: 20px;
+  text-align: center;
 }
 
 h1 {
   font-family: 'Headland One', serif;
-  text-align: center;
+  font-size: $xxlarge-font-size;
+  margin: 0 0 2rem 0;
 
 }
 
@@ -27,6 +46,31 @@ img {
   max-width: 100%;
 }
 
+button {
+  border: none;
+  box-shadow: none;
+  display: block;
+  font-size: 1rem;
+  margin: 1rem 0;
+  padding: 1rem;
+  width: 100%;
+}
+
+dd,
+dt {
+  display: inline-block;
+}
+
+dt::after {
+  content: ": ";
+}
+
+dd {
+  margin: 0 2rem 0 1rem;
+}
+dd:last-child {
+  margin-right: 0;
+}
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
