--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,23 +16,26 @@ $xxlarge-font-size    : $base-font-size * 2;
 
 
 .browsehappy {
-  margin: 0.2em 0;
+  margin: 0.2rem 0;
   background: #ccc;
   color: #000;
-  padding: 0.2em 0;
+  padding: 0.2rem 0;
 }
 
 body {
-  //@include debug-vertical-alignment();
+  @include debug-vertical-alignment();
+  color: #777;
   font-family: 'Nixie One', cursive;
   font-size: $base-font-size;
   line-height: $base-line-height;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  margin: 0;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   text-align: center;
 }
 
 h1 {
+  color: #000;
   font-family: 'Headland One', serif;
   font-size: $xxlarge-font-size;
   margin: 0 0 2rem 0;
@@ -47,13 +50,26 @@ img {
 }
 
 button {
-  border: none;
+  background: none;
+  border: 1px solid #000;
   box-shadow: none;
+  cursor: pointer;
   display: block;
   font-size: 1rem;
-  margin: 1rem 0;
+  margin: 2rem 0;
   padding: 1rem;
   width: 100%;
+
+  &:active:not(:disabled),
+  &:hover:not(:disabled){
+    background: #000;
+    color: #fff;
+  }
+  &:disabled {
+    color: #777;
+    border-color: #777;
+    cursor: not-allowed;
+  }
 }
 
 dd,
@@ -61,8 +77,14 @@ dt {
   display: inline-block;
 }
 
-dt::after {
-  content: ": ";
+
+
+dt {
+  color: #000;
+
+  &::after {
+    content: ": ";
+  }
 }
 
 dd {
