--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -56,6 +56,7 @@ button {
   cursor: pointer;
   display: block;
   font-size: 1rem;
+  line-height: 2rem;
   margin: 2rem 0;
   padding: 1rem;
   width: 100%;
