--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,6 @@
 // Frameworks
 // ============================================================================
-@import "compass/typography/vertical_rhythm";
+//@import "compass/typography/vertical_rhythm";
 
 
 // Typography
@@ -23,7 +23,7 @@ $xxlarge-font-size    : $base-font-size * 2;
 }
 
 body {
-  @include debug-vertical-alignment();
+  //@include debug-vertical-alignment();
   color: #777;
   font-family: 'Nixie One', cursive;
   font-size: $base-font-size;
