Meriadoc 'Merry' Brandybuck pint gif

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,7 +12,7 @@
 </dl>
 
 <img ng-show="beer.data.labels.large" src="{{beer.data.labels.large}}" alt="{{beer.data.name}}" title="{{beer.data.name}}" />
-<img ng-show="!beer.data.labels.large" src="images/duck.jpg" alt="Lovely Pints!" title="Lovely Pints!" />
+<img ng-show="!beer.data.labels.large" src="images/pint.gif" alt="Lovely Pints!" title="Lovely Pints!" />
 
 <p>{{beer.data.description}}</p>
 
